--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -160,13 +160,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
-    <ClCompile Include="TestScene.cpp" />
+    <ClCompile Include="TronScene.cpp" />
     <ClCompile Include="TronGame.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
-    <ClInclude Include="TestScene.h" />
+    <ClInclude Include="TronScene.h" />
     <ClInclude Include="TronGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
