--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -162,12 +162,14 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
+    <ClCompile Include="TankComponent.cpp" />
     <ClCompile Include="TronScene.cpp" />
     <ClCompile Include="TronGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
+    <ClInclude Include="TankComponent.h" />
     <ClInclude Include="TronScene.h" />
     <ClInclude Include="TronGame.h" />
   </ItemGroup>
