groundwork for maze

--- a/Ant-Djin/Tron/Tron.vcxproj.filters
+++ b/Ant-Djin/Tron/Tron.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="TankComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="MazeComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TronGame.h">
@@ -54,6 +57,9 @@
       <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="TankComponent.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="MazeComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
