--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MazeComponent.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
     <ClCompile Include="TankComponent.cpp" />
@@ -167,6 +168,7 @@
     <ClCompile Include="TronGame.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MazeComponent.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
     <ClInclude Include="TankComponent.h" />
