--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GunComponent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MazeComponent.cpp" />
     <ClCompile Include="MenuScene.cpp" />
@@ -168,6 +169,7 @@
     <ClCompile Include="TronGame.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GunComponent.h" />
     <ClInclude Include="MazeComponent.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
