--- a/Ant-Djin/Tron/Tron.vcxproj.filters
+++ b/Ant-Djin/Tron/Tron.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="GunComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="BulletComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TronGame.h">
@@ -66,6 +69,9 @@
       <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="GunComponent.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="BulletComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
