--- a/Ant-Djin/Minigin/Minigin.vcxproj.filters
+++ b/Ant-Djin/Minigin/Minigin.vcxproj.filters
@@ -273,5 +273,6 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Collisions</Filter>
     </ClCompile>
+    <ClCompile Include="BaseGame.cpp" />
   </ItemGroup>
 </Project>
