--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -169,7 +169,9 @@
     <ClCompile Include="MazeComponent.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
+    <ClCompile Include="TankControllerBase.cpp" />
     <ClCompile Include="TankComponent.cpp" />
+    <ClCompile Include="TankControllerInput.cpp" />
     <ClCompile Include="TronScene.cpp" />
     <ClCompile Include="TronGame.cpp" />
   </ItemGroup>
@@ -180,6 +182,8 @@
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
     <ClInclude Include="TankComponent.h" />
+    <ClInclude Include="TankControllerBase.h" />
+    <ClInclude Include="TankControllerInput.h" />
     <ClInclude Include="TronScene.h" />
     <ClInclude Include="TronGame.h" />
   </ItemGroup>
