--- a/Ant-Djin/Tron/Tron.vcxproj.filters
+++ b/Ant-Djin/Tron/Tron.vcxproj.filters
@@ -1,14 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -19,14 +11,14 @@
     <Filter Include="Scenes">
       <UniqueIdentifier>{bba273d6-248a-4fd3-bd10-e99533d1fc02}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game">
+      <UniqueIdentifier>{11c99920-ca6b-4949-a697-6c5b5d0fc8ce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TankControllers">
+      <UniqueIdentifier>{dbb759e2-5be5-4f56-b2b3-fe0c00d4e4dc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="TronGame.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="MoveComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
@@ -48,11 +40,20 @@
     <ClCompile Include="BulletComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="TronGame.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="TankControllerBase.cpp">
+      <Filter>TankControllers</Filter>
+    </ClCompile>
+    <ClCompile Include="TankControllerInput.cpp">
+      <Filter>TankControllers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TronGame.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MoveComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
@@ -73,6 +74,15 @@
     </ClInclude>
     <ClInclude Include="BulletComponent.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="TronGame.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="TankControllerBase.h">
+      <Filter>TankControllers</Filter>
+    </ClInclude>
+    <ClInclude Include="TankControllerInput.h">
+      <Filter>TankControllers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
