added multiple features
Ai tanks work, bullets dissapear after bouncing x amount of times, objects are able to be deleted (without breaking the collision system)

--- a/Ant-Djin/Tron/Tron.vcxproj.filters
+++ b/Ant-Djin/Tron/Tron.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="TankControllerInput.cpp">
       <Filter>TankControllers</Filter>
     </ClCompile>
+    <ClCompile Include="TankControllerAI.cpp">
+      <Filter>TankControllers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MoveComponent.h">
@@ -82,6 +85,9 @@
       <Filter>TankControllers</Filter>
     </ClInclude>
     <ClInclude Include="TankControllerInput.h">
+      <Filter>TankControllers</Filter>
+    </ClInclude>
+    <ClInclude Include="TankControllerAI.h">
       <Filter>TankControllers</Filter>
     </ClInclude>
   </ItemGroup>
