--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="MazeComponent.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
+    <ClCompile Include="TankControllerAI.cpp" />
     <ClCompile Include="TankControllerBase.cpp" />
     <ClCompile Include="TankComponent.cpp" />
     <ClCompile Include="TankControllerInput.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
     <ClInclude Include="TankComponent.h" />
+    <ClInclude Include="TankControllerAI.h" />
     <ClInclude Include="TankControllerBase.h" />
     <ClInclude Include="TankControllerInput.h" />
     <ClInclude Include="TronScene.h" />
