--- a/Ant-Djin/Tron/Tron.vcxproj
+++ b/Ant-Djin/Tron/Tron.vcxproj
@@ -164,28 +164,36 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BulletComponent.cpp" />
+    <ClCompile Include="DiamondComponent.cpp" />
     <ClCompile Include="GunComponent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MazeComponent.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
+    <ClCompile Include="PlayerPointsRecord.cpp" />
+    <ClCompile Include="PlayerStatsComponent.cpp" />
     <ClCompile Include="TankControllerAI.cpp" />
     <ClCompile Include="TankControllerBase.cpp" />
     <ClCompile Include="TankComponent.cpp" />
     <ClCompile Include="TankControllerInput.cpp" />
+    <ClCompile Include="TankObserver.cpp" />
     <ClCompile Include="TronScene.cpp" />
     <ClCompile Include="TronGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BulletComponent.h" />
+    <ClInclude Include="DiamondComponent.h" />
     <ClInclude Include="GunComponent.h" />
     <ClInclude Include="MazeComponent.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="MoveComponent.h" />
+    <ClInclude Include="PlayerPointsRecord.h" />
+    <ClInclude Include="PlayerStatsComponent.h" />
     <ClInclude Include="TankComponent.h" />
     <ClInclude Include="TankControllerAI.h" />
     <ClInclude Include="TankControllerBase.h" />
     <ClInclude Include="TankControllerInput.h" />
+    <ClInclude Include="TankObserver.h" />
     <ClInclude Include="TronScene.h" />
     <ClInclude Include="TronGame.h" />
   </ItemGroup>
